S01 -01/06/2022 - Cristhyam - Estilização da tela para buscar Colaborador

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -53,9 +53,12 @@
             <div class="container">
                 <div class="container_boxbuscaColab">
                     <div class="lg">
-                        <h3 class="active log title">Colaboradores</h3>
+                        <h3 class="active log title buscaColab">Colaboradores</h3>
                     </div>
                     <div id="ButtonBuscaColab">
+                        <div class="searchColab">
+                            <input type="text" id="txtBuscaColab" placeholder="Buscar..." />
+                        </div>
 
                     </div>
                     <button onclick="buscaDados()">Buscar Dados</button>
