S01 -01/06/2022 - Cristhyam - Estilização da aba search na busca de EPI

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -102,6 +102,9 @@
                         <h3 class="active log title">Busca de EPI</h3>
                     </div>
                     <div id="ButtonBuscaEPI">
+                        <div class="searchEPI">
+                            <input type="text" id="txtBuscaEPI" placeholder="Buscar..." />
+                        </div>
 
                     </div>
                     <button onclick="buscaDadosEPI()">Buscar Dados</button>
