S01 -08/06/2022 - Cristhyam - Alteração completa da pagina de login

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -159,15 +159,18 @@
                         </form>
 
                         <form id="Entrega.ColabEPI">
-                            <label for="Entreg.ColabEPI">Escolha o EPI para o colaborador : </label>
-                            <select name="" id="EntregaEPI"></select>
                         </form>
+                        <div id="teste12">
+                            <label>
+                                Escolha o EPI para o colaborador:
+                            </label>
+                            <ul id="teste123"></ul>
 
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
 
