--- a/src/html/Page-Home.html
+++ b/src/html/Page-Home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seleção de Usuário</title>
-    <link rel="shortcut icon" href="../Assets/img/Logo - For EPI 2.png" type="img/x-png" />
+    <link rel="shortcut icon" href="C:\Users\Pichau\Pictures\DNS\Programação\pmv-sint-2022-1-e1-proj-web-t1-grupo-08\src\Assets\img\LOGO_EPI.png" type="img/x-png" />
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet" href="../css/Style-Home.css">
 </head>
@@ -14,7 +14,7 @@
 <body>
 
     <div class="logo">
-        <img class="logo2" src="../Assets/img/Logo - For EPI 2.png" alt="LOGO FOR EPI">
+        <img class="logo2" src="C:\Users\Pichau\Pictures\DNS\Programação\pmv-sint-2022-1-e1-proj-web-t1-grupo-08\src\Assets\img\LOGO_EPI.png" alt="LOGO FOR EPI">
     </div>
 
     <main class="container">
