--- a/src/html/Tela-login.html
+++ b/src/html/Tela-login.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tela de Login</title>
-  <link rel="shortcut icon" href="../Assets/img/Logo - For EPI 2.png" type="img/x-png" />
+  <link rel="shortcut icon" href="C:\Users\Pichau\Pictures\DNS\Programação\pmv-sint-2022-1-e1-proj-web-t1-grupo-08\src\Assets\img\LOGO_EPI.png" type="img/x-png" />
   <link rel="stylesheet" href="../css/Style-TelaLogin.css">
 </head>
 
@@ -18,7 +18,7 @@
           </ul>
     </header>
   <div class="logo">
-        <img class = "logo2" src="../Assets/img/Logo - For EPI 2.png" alt="Logo FOR EPI"> 
+        <img class = "logo2" src="C:\Users\Pichau\Pictures\DNS\Programação\pmv-sint-2022-1-e1-proj-web-t1-grupo-08\src\Assets\img\LOGO_EPI.png" alt="Logo FOR EPI"> 
   </div>  
   <div class="container">
     <div class="container_box">
