S01 -08/06/2022 - Cristhyam - Criação de tel para linkar EPI com Colaborador

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -158,17 +158,20 @@
                             <select name="" id="Entrega"></select>
                         </form>
 
-                        <form id="Entrega.ColabEPI">
-                        </form>
+                        <!-- <form id="Entrega.ColabEPI"> -->
+                        <!-- </form> -->
                         <div id="teste12">
                             <label>
                                 Escolha o EPI para o colaborador:
                             </label>
                             <ul id="teste123"></ul>
-
                         </div>
                     </div>
+                    <div class="Atribuir_EPI">
+                        <button>Atribuir EPI</button>
+                    </div>
                 </div>
+
             </div>
         </div>
     </div>
