--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -10,20 +10,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Mada&display=swap" rel="stylesheet">
-    <style> 
-        h3,h4 {
+    <!-- <style>
+        h3,
+        h4 {
             font-family: "Montserrat", sans-serif;
         }
+
         label {
             font-family: "Montserrat", sans-serif;
         }
+
         p {
             font-size: 100px;
             font-family: 'Black Ops One', cursive;
         }
-    </style>
+    </style> -->
     <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="shortcut icon" href="C:\Users\Pichau\Pictures\DNS\Programação\pmv-sint-2022-1-e1-proj-web-t1-grupo-08\src\Assets\img\LOGO_EPI.png" type="img/x-png" />
+    <link rel="shortcut icon" href="../Assets/img/LOGO_EPI.png" type="img/x-png" />
 </head>
 
 <body>
@@ -31,7 +34,7 @@
     <div class="box-img-linhas">
         <div class="line-home"></div>
         <div class="linha-vertical"></div>
-        <img class="logo" src="C:\Users\Pichau\Pictures\DNS\Programação\pmv-sint-2022-1-e1-proj-web-t1-grupo-08\src\Assets\img\LOGO_EPI.png" alt="LOGO FOR EPI" />
+        <img class="logo" src="../Assets/img/LOGO_EPI.png" alt="LOGO FOR EPI" />
         <div class="linha-horizontal"></div>
     </div>
 
