S01 -13/06/2022 - Cristhyam - Criação da tabela para gerar usuário com o EPI (incompleto)

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -182,11 +182,17 @@
                             <label>
                                 Escolha o EPI para o colaborador:
                             </label>
-                            <ul id="teste123"></ul>
+                            <select name="" id="EntregaEPI"></select>
+                        </div>
+                        <div class="relatorio">
+                            <table id="corpoTabela">
+
+                            </table>
                         </div>
                     </div>
                     <div class="Atribuir_EPI">
-                        <button>Atribuir EPI</button>
+                        <button onclick="addEPI()">Atribuir EPI</button>
+                        <button onclick="tabelaInner()">Gerar Resultados</button>
                     </div>
                 </div>
 
