--- a/src/html/Page-Home.html
+++ b/src/html/Page-Home.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="logo">
-        <img class="logo2" src="C:\Users\Pichau\Pictures\DNS\Programação\pmv-sint-2022-1-e1-proj-web-t1-grupo-08\src\Assets\img\LOGO_EPI.png" alt="LOGO FOR EPI">
+        <img class="logo2" src="../Assets/img/LOGO_EPI.png" LOGO FOR EPI">
     </div>
 
     <main class="container">
