S01 -13/06/2022 - Cristhyam - Remoção da animação da navBar e alteração de icones

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -53,7 +53,7 @@
             <i class="Icon buscaEPI" data-feather="trending-up"></i>
             <i class="Icon cadastroEPI" data-feather="check-square"></i>
             <i class="Icon entregaEPI" data-feather="book-open" onclick="buscaEntrega()"></i>
-            <i class="Icon alertaEPI" data-feather="alert-triangle"></i>
+            <!-- <i class="Icon alertaEPI" data-feather="alert-triangle"></i> -->
             <i class="Icon" data-feather="log-out"></i>
         </nav>
 
@@ -63,7 +63,7 @@
             <p class="p- EPI">EPI e descarte</p>
             <p class="p- cadEPI">Cadastro de EPI</p>
             <p class="p- histórico">Histórico de EPI</p>
-            <p class="p- aviso">Alerta de vencimento</p>
+            <p class="p- aviso">Sair</p>
         </div>
 
         <!-- Tela para buscar colaboradores -->
@@ -169,7 +169,6 @@
                         <h3 class="active log title">Entrega de EPI</h3>
                     </div>
                     <div>
-                        <p class="ESC">Escolha o colaborador:</p>
 
                         <form>
                             <label for="Entreg.Colab">Escolha o colaborador : </label>
