S01 -14/06/2022 - Cristhyam - Teste da nova imagem da pagian de login

--- a/src/html/Tela-login.html
+++ b/src/html/Tela-login.html
@@ -21,7 +21,9 @@
   </header>
 
   <main>
-    <img src="../Assets/img/male-worker-with-bulldozer-in-sand-quarry.jpg" alt="" class="img_central">
+    <div class="imagem_principal">
+      <img src="../Assets/img/woman-wearing-a-special-industrial-protective-equipment.jpg" alt="" class="img_central">
+    </div>
     <div class="main_box">
       <h1>Login
         <span class="decoration1"></span>
