S01 -14/06/2022 - Cristhyam - Finalização dos relatórios para o colaborador e EPI

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -77,6 +77,11 @@
                         <div class="searchColab">
                             <input type="text" id="txtBuscaColab" placeholder="Buscar..." />
                         </div>
+                        <div class="relatorio">
+                            <table id="TabelaColab">
+
+                            </table>
+                        </div>
 
                     </div>
                     <button onclick="buscaDados()">Buscar Dados</button>
@@ -123,7 +128,11 @@
                         <div class="searchEPI">
                             <input type="text" id="txtBuscaEPI" placeholder="Buscar..." />
                         </div>
+                        <div class="relatorio">
+                            <table id="TabelaEpi">
 
+                            </table>
+                        </div>
                     </div>
                     <button onclick="buscaDadosEPI()">Buscar Dados</button>
 
@@ -175,8 +184,6 @@
                             <select name="" id="Entrega"></select>
                         </form>
 
-                        <!-- <form id="Entrega.ColabEPI"> -->
-                        <!-- </form> -->
                         <div id="teste12">
                             <label>
                                 Escolha o EPI para o colaborador:
@@ -198,38 +205,6 @@
             </div>
         </div>
     </div>
-
-
-
-    <!-- Tela de notificação de EPI vencido
-        <div class="Container_main warningEPI">
-            <div class="container">
-                <div class="Container_boxAvisoEPI">
-                    <div class="lg">
-                        <h3 class="active log title">Alerta de EPI</h3>
-                    </div>
-                    <div class="form form_login">
-                        <form id="">
-                            <label for="EPI">Tipo de EPI</label>
-                            <input id="" type="text" name="EPI" autocomplete="off">
-                            <label for="CA">Certificado de aprovação (CA)</label>
-                            <input type="text" name="CA" id="">
-                            <label for="NumberLote">Número do Lote</label>
-                            <input type="text" name="Number-Lote" id="">
-                            <label for="Fabricante">Fabricante</label>
-                            <input type="text" name="Fabricante" id="">
-                            <label for="DataVal">Data de validade</label>
-                            <Input type="Text" name="DataVal" id="">
-                            <label for="DataEnter">Data de entrada</label>
-                            <Input type="Text" name="DataEnter" id=">
-                            <button onclick=" adiciona()" class="btn">Cadastrar</button>
-                            <form />
-                            <p>Precisa de Ajuda?</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
 
     <!-- <footer>
