--- a/src/html/Tela-login.html
+++ b/src/html/Tela-login.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tela de Login</title>
-  <link rel="shortcut icon" href="C:\Users\Pichau\Pictures\DNS\Programação\pmv-sint-2022-1-e1-proj-web-t1-grupo-08\src\Assets\img\LOGO_EPI.png" type="img/x-png" />
+  <link rel="shortcut icon" type="img/x-png" />
   <link rel="stylesheet" href="../css/Style-TelaLogin.css">
   <script src="https://unpkg.com/feather-icons"></script>
 </head>
@@ -22,7 +22,7 @@
 
   <main>
     <div class="imagem_principal">
-      <img src="../Assets/img/portrait-of-factory-worker-in-protective-equipment-holding-thumbs-up-in-production-hall.jpg" alt="" class="img_central">
+      <!-- <img src="../Assets/img/portrait-of-factory-worker-in-protective-equipment-holding-thumbs-up-in-production-hall.jpg" alt="" class="img_central"> -->
     </div>
     <div class="main_box">
       <h1>Login
